CLOSED FIXED 39694
[Qt] GraphicsLayer: warnings when reloading page
https://bugs.webkit.org/show_bug.cgi?id=39694
Summary [Qt] GraphicsLayer: warnings when reloading page
Noam Rosenthal
Reported 2010-05-25 15:34:32 PDT
The following warnings appear at times: QPainter::begin: Paint device returned engine == 0, type: 2 QPainter::setRenderHint: Painter must be active to set rendering hints QPainter::end: Painter not active, aborted
Attachments
Fix the warnings by making sure we don't recache/mask empty layers (2.03 KB, patch)
2010-05-25 15:47 PDT, Noam Rosenthal
no flags
Same thing without the extra tab (2.03 KB, patch)
2010-06-01 10:20 PDT, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2010-05-25 15:47:21 PDT
Created attachment 57049 [details] Fix the warnings by making sure we don't recache/mask empty layers
Noam Rosenthal
Comment 2 2010-06-01 10:20:10 PDT
Created attachment 57562 [details] Same thing without the extra tab
WebKit Commit Bot
Comment 3 2010-06-01 20:40:10 PDT
Comment on attachment 57562 [details] Same thing without the extra tab Clearing flags on attachment: 57562 Committed r60532: <http://trac.webkit.org/changeset/60532>
WebKit Commit Bot
Comment 4 2010-06-01 20:40:15 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 5 2010-06-01 22:39:35 PDT
Revision r60532 cherry-picked into qtwebkit-2.0 with commit 57c68f5a29404093d801c8f76f70d573712ddea3
Note You need to log in before you can comment on or make changes to this bug.