2010-06-01  No'am Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsLayer: warnings when reloading page
        https://bugs.webkit.org/show_bug.cgi?id=39694

        Made sure recaching and masks aren't attempted on zero-size layers.

        No new tests. Old tests (e.g. LayoutTests/compositing/masks) show the problem.

        * platform/graphics/qt/GraphicsLayerQt.cpp:
        (WebCore::MaskEffectQt::draw):
        (WebCore::GraphicsLayerQtImpl::recache):

Canonical link: https://commits.webkit.org/51565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60532 268f45cc-cd09-0410-ab3c-d52691b4dbfc